2006-09-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/stdio.h: Make fpos_t be signed to allow negative
	SEEK_CUR offsets to fseek().
	* include/stream.inl (set_position): If SEEK_CUR, then if
	having to reconcile difference between position and underlying
	file position, then requested seek position needs adjusting
	for buffer size.
	Both above reported and analysed by Ivan Djelic.

2006-09-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/stream.cxx (read): Only update position after direct
	reads from I/O system so it's updated by the correct number of
	bytes.
	(write): Reset underlying file position if there had been
	stuff read from the file left in the buffer so the file positions
	are inconsistent.

2005-07-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/common/fopen.cxx (fopen): Default the open mode to Read
	until we have process the flags. Initialize the dev handle. These
	keep the compiler happy.

2005-04-11  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/stream.cxx (read): don't reference flags.buffering
	when configured by CDL to be unbuffered.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/stdio.h: Added CYGBLD_ATTRIB_{PRINTF|SCANF}_FORMAT where
	appropriate so the compiler does more checking.

2004-12-08  Daniel Neri  <daniel.neri@sigicom.se>

	* cdl/stdio.cdl (CYGPKG_LIBC_STDIO_FILEIO): The FILEIO variant of
	vsnprintf breaks if CYGSEM_LIBC_STDIO_DYNAMIC_SETVBUF is disabled.
	
2004-09-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/stdio.cdl (CYGFUN_LIBC_STDIO_OPEN_POSIX_FDFUNCS): New option,
	to control whether or not fdopen()/fileno() are implemented.
	Only build fopen/fclose if CYGPKG_LIBC_STDIO_OPEN.

	* src/common/fclose.cxx: Can remove ifdef CYGPKG_LIBC_STDIO_OPEN since
	file now isn't even built if not.
	* src/common/fopen.cxx: Ditto. Also condition on
	CYGFUN_LIBC_STDIO_OPEN_POSIX_FDFUNCS so decision is centralised in CDL.

2004-08-18  Jonathan Larmour  <jifl@eCosCentric.com>
